--- a/MODULO5/U4/views/admin/login.hbs
+++ b/MODULO5/U4/views/admin/login.hbs
@@ -1,15 +1,27 @@
-<h1>{{title}}</h1>
+<body class="mainLogin ">
+  <div class="container">
+    
+    <h1 class="title">Inicie Sesion</h1>
+    
+    <form action="/admin/login" method="post" class="loginForm">
 
- <form action="/admin/login" method="post" className="loginForm">
-            <p>
-              <label htmlFor="nombreDeUsuario">USUARIO</label>
-              <input type="text" name="usuario" required />
-            </p>
-            <p>
-              <label htmlFor="[password]">CONTRASEÑA</label>
-              <input type="password" name="password" required />
-            </p>
-            <p>
-              <button type="submit">Ingresar</button>
-            </p>
- </form>
+                  <label htmlFor="nombreDeUsuario">USUARIO</label>
+                  <input type="text" name="usuario" required />
+
+                  <label htmlFor="[password]">CONTRASEÑA</label>
+                  <input type="password" name="password" required />
+  
+                  <button type="submit">Ingresar</button>
+
+                        {{#if error}}
+                        <p>Usuario o clave incorrectos</p>
+                        {{/if}}
+  
+
+    </form>
+
+
+  </div>
+</body> 
+
+
