--- a/MODULO5/U4/views/admin/panelPrincipal.hbs
+++ b/MODULO5/U4/views/admin/panelPrincipal.hbs
@@ -1,7 +1,61 @@
-<div class="container" style="margin:50px auto;">
-  <div class="row">
-    <div class="col">
-      <p class="text-right" style="color:white ;">BIENVENIDO {{usuario}}  <a href="/admin/login/logout" style="color: white;" class="btn btn-sm btn-danger">Cerrar Sesion<i class="fa fa-sing-out"></i></a></p>
+<body class="mainPanelPrincipal" >
+  <div class="container holder ">
+
+
+      <h1 class="saludo">BIENVENIDO {{usuario}} </h1>
+   
+
+
+      <div class="inputPanel">
+
+        <a class="inputBtn" href="/admin/alumnos">
+          <p>Alumnos</p>
+        </a>
+
+        <a class="inputBtn" href="/admin/docentes">
+          <p>Docentes</p>
+        </a>
+        
+        <div class="inputBtn">
+          <p>Cuotas</p>
+        </div>
+
+        <a href="/admin/horarios" class="inputBtn">
+          <p>Horarios</p>
+        </a>
+
+        <a href="/admin/rutinas" class="inputBtn">
+          <p>Rutinas</p>
+        </a>
+
+        <div class="inputBtn">
+          <p>Productos</p>
+        </div>
+
+
+
+
+
+        <div class="inputBtn">
+          <p>Horario de atencion</p>
+        </div>
+
+        <div class="inputBtn">
+          <p>Galeria</p>
+        </div>  
+
+        <a class="inputBtn" href="/admin/login/logout">
+          <p> Cerrar Sesion<i
+                class="fa fa-sing-out"></i></p>
+        </a>
+
+
+      </div>
+
+
+
+
     </div>
+
   </div>
-</div>
+</body>
