--- a/MODULO6/U2/views/admin/components/alumnos.hbs
+++ b/MODULO6/U2/views/admin/components/alumnos.hbs
@@ -21,11 +21,8 @@
                         <th class="table-light" id="thead" scope="col">DNI</th>
                         <th class="table-light" id="thead" scope="col">Telefono</th>
                         <th class="table-light" id="thead" scope="col">e-mail</th>
-                        <th class="table-light" id="thead" scope="col">ingreso</th>
-                        <th class="table-light" id="thead" scope="col">Foto</th>
                         <th class="table-light" id="thead" scope="col">Horario</th>
-                        <th class="table-light" id="thead" scope="col">Observaciones</th>
-                        <th class="table-light" id="thead" scope="col" style="text-align: right ;">Acciones</th>
+                        <th class="table-light" id="thead" scope="col" style="text-align: center ;">Acciones</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -37,10 +34,8 @@
                         <th class="table-light" id="tbody" scope="row">{{dni}}</th>
                         <th class="table-light" id="tbody" scope="row">{{telefono}}</th>
                         <th class="table-light" id="tbody" scope="row">{{email}}</th>
-                        <th class="table-light" id="tbody" scope="row">{{fecha_inscripcion}}</th>
-                        <th class="table-light" id="tbody" scope="row">{{#if foto}} Si {{else}} No {{/if}}</th>
                         <th class="table-light" id="tbody" scope="row">{{horario}}</th>
-                        <th class="table-light" id="tbody" scope="row">{{observaciones}}</th>
+                        
                         
 
                         <td style="border: none;" class="text-center">
