--- a/MODULO6/U2/views/admin/components/modificarDocente.hbs
+++ b/MODULO6/U2/views/admin/components/modificarDocente.hbs
@@ -66,15 +66,15 @@
       </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group mt-5">
       <!-- Modificado por -->
       <label for="observaciones" class="control-label">Modificado por</label>
       <input type="text" class="form-control" id="modificado_por" name="modificado_por" value={{usuario}} readonly />
     </div>
 
-    <div class="form-group">
+    <div class="form-group mt-3">
       <!-- Submit Button -->
-      <button type="submit" class="btn btn-primary">Cargar</button>
+      <button type="submit" class="btn btn-danger">Cargar</button>
     </div>
 
     {{#if error}}
