--- a/MODULO6/U2/views/admin/components/alumnos.hbs
+++ b/MODULO6/U2/views/admin/components/alumnos.hbs
@@ -47,7 +47,7 @@
                                 <i class="fa fa-trash"></i>
                             </a>
 
-                            <a href="/admin/alumnos/perfilPersonal" id="mods" class="btn btn-m btn-secondary">
+                            <a href="/admin/alumnos/perfilPersonal/{{id_alumno}}" id="mods" class="btn btn-m btn-secondary">
                                 <i class="fa fa-eye"></i>
                             </a>
                         </td>
