--- a/MODULO6/U2/views/admin/components/docentes.hbs
+++ b/MODULO6/U2/views/admin/components/docentes.hbs
@@ -48,7 +48,7 @@
                             <a href="/admin/docentes/eliminar/{{id_docente}}" class="btn btn-m btn-secondary">
                                 <i class="fa fa-trash"></i>
                             </a>
-                             <a href="/admin/docentes/perfilPersonal" id="mods" class="btn btn-m btn-secondary">
+                             <a href="/admin/docentes/perfilPersonal/{{id_docente}}" id="mods" class="btn btn-m btn-secondary">
                                 <i class="fa fa-eye"></i>
                             </a>
                         </td>
