--- a/MODULO6/U2/views/admin/components/panelRutinas.hbs
+++ b/MODULO6/U2/views/admin/components/panelRutinas.hbs
@@ -1,5 +1,5 @@
 <body >
-  <div class="container holder" style="margin: 9.375rem 25rem;">
+  <div class="container holder">
     <div class="inputPanel">
      
       <a class="inputBtn" href="#">
