--- a/MODULO6/U2/public/stylesheets/nav.css
+++ b/MODULO6/U2/public/stylesheets/nav.css
@@ -1,117 +1,105 @@
-
-.header{
-    position: sticky;
-    grid-area: header;
-    margin-bottom: 2rem;
-    left: 0px;
-    top: 0px;
-    width: 100vw;
-    min-height: 10vh;
-    padding: 10px;
-    background: var(--blackTrans);
-    z-index: 1;
-    /* border-bottom: 1px solid var(--redLogo); */
+.header {
+  position: sticky;
+  grid-area: header;
+  margin-bottom: 2rem;
+  left: 0px;
+  top: 0px;
+  width: 100vw;
+  min-height: 10vh;
+  padding: 10px;
+  background: var(--blackTrans);
+  z-index: 1;
+  /* border-bottom: 1px solid var(--redLogo); */
 }
 
-.banner{
-    display: block;
+.banner {
+  display: block;
 }
-.centroheader{
-
-    padding-top: 20px;
-    
+.centroheader {
+  padding-top: 20px;
 }
-.mmovil{
-    display: none;
+.mmovil {
+  display: none;
 }
 
+.logoText {
+  text-transform: uppercase;
 
-.logoText{
-	text-transform: uppercase;
-	
-	display: inline-block;
-	
-     
-} 
+  display: inline-block;
+}
 
 .mainLogo {
-    font-size: 31px;
-    font-family: "Octin College Bold";
-    letter-spacing: 0.18em;
-    
-   ; /* delicia de iluminacion */
-    text-shadow: 0 0 100px var(--white);
+  font-size: 31px;
+  font-family: "Octin College Bold";
+  letter-spacing: 0.18em; /* delicia de iluminacion */
+  text-shadow: 0 0 100px var(--white);
 
-/* Clip Background Image */
+  /* Clip Background Image */
 
-	  background: url(../images/animated-text-fill.png) repeat-y;
-	  -webkit-background-clip: text;
-	  background-clip: text;
+  background: url(../images/animated-text-fill.png) repeat-y;
+  -webkit-background-clip: text;
+  background-clip: text;
 
-/* Animate Background Image */
+  /* Animate Background Image */
 
-	  -webkit-text-fill-color: transparent;
-	  animation: aitf 80s linear infinite;
+  -webkit-text-fill-color: transparent;
+  animation: aitf 80s linear infinite;
 
-/* Activate hardware acceleration for smoother animations */
+  /* Activate hardware acceleration for smoother animations */
 
-	  transform: translate3d(0,10,0);
-	  backface-visibility: hidden;
-
-  }
-
+  transform: translate3d(0, 10, 0);
+  backface-visibility: hidden;
+}
 
 /* Animate Background Image */
 
 @keyframes aitf {
-	0% { background-position: 0% 50%; }
-	100% { background-position: 100% 50%; }
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
 }
 
-.nav{
-
-    text-shadow: 0 0 80px rgba(255,255,255,.5);
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-   
+.nav {
+  text-shadow: 0 0 80px rgba(255, 255, 255, 0.5);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.buttons{
-    display: flex;
-    gap: 10px;
-    margin-top: -35px;
-    color: black;
-    font-family: "Octin College Bold";
+.buttons {
+  display: flex;
+  gap: 10px;
+  margin-top: -35px;
+  color: black;
+  font-family: "Octin College Bold";
 }
 
-.button{
-    letter-spacing: 0.18em;
-    text-shadow: 0 0 1px var(--black);
-    display: block;
-    margin-right: 6px;
-    letter-spacing: 0.1em;
-    color:  var(--black);
-    padding: 5px 6px;
-    font-weight: 800;
-    text-decoration: none;
+.button {
+  letter-spacing: 0.18em;
+  text-shadow: 0 0 1px var(--black);
+  display: block;
+  margin-right: 6px;
+  letter-spacing: 0.1em;
+  color: var(--black);
+  padding: 5px 6px;
+  font-weight: 800;
+  text-decoration: none;
 }
 
-.button:hover{
-    transition: 0.3s;
-    text-shadow: 0 0 1.3px var(--white);
+.button:hover {
+  transition: 0.3s;
+  text-shadow: 0 0 1.3px var(--white);
 
-    color: var(--redLogo);
+  color: var(--redLogo);
 }
-.active{
-    color: var(--red)
+.active {
+  color: var(--red);
 }
-
-
-
-
 
 /**************************************************************/
 /***************1024p******************************************/
@@ -139,7 +127,3 @@
 
 
 } */
-
-
-
-
