--- a/MODULO6/U2/views/admin/layout.hbs
+++ b/MODULO6/U2/views/admin/layout.hbs
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/stylesheets/agregarAlumnos.css" />
     <link rel="stylesheet" href="/stylesheets/docentes.css" />
     <link rel="stylesheet" href="/stylesheets/agregarDocentes.css" />
+    <link rel="stylesheet" href="/stylesheets/perfilPersonal.css" />
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
