Fin Del Trabajo final

--- a/Trabajo Final/backEnd/public/stylesheets/footer.css
+++ b/Trabajo Final/backEnd/public/stylesheets/footer.css
@@ -20,3 +20,39 @@
   padding: 2rem 0;
   gap: 2rem;
 }
+
+
+/**************************************************************/
+/***************1024p******************************************/
+/**************************************************************/
+/* 
+@media only screen and (max-whidth: 1024px){
+
+
+} */
+
+/**************************************************************/
+/***************800px******************************************/
+/**************************************************************/
+/* 
+@media only screen and (max-whidth: 800px){
+
+
+} */
+
+/**************************************************************/
+/***************480px******************************************/
+/**************************************************************/
+
+@media only screen and (max-width: 480px){
+
+  .content{
+    justify-content: center;
+  }
+
+}
+
+
+/**************************************************************/
+/***************800px******************************************/
+/**************************************************************/
