--- a/Trabajo Final/backEnd/public/stylesheets/panelPrincipal.css
+++ b/Trabajo Final/backEnd/public/stylesheets/panelPrincipal.css
@@ -6,7 +6,6 @@
   padding: 0.625rem;
   width: 57.5rem;
   height: 26.25rem;
-
   margin-top: 2rem;
   display: grid;
   width: 100%;
@@ -44,4 +43,38 @@
   color: antiquewhite;
   font-size: 1.375rem;
   text-decoration: none;
+  text-align: center;
 }
+
+
+/**************************************************************/
+/***************1024p******************************************/
+/**************************************************************/
+/* 
+@media only screen and (max-whidth: 1024px){
+
+
+} */
+
+/**************************************************************/
+/***************800px******************************************/
+/**************************************************************/
+
+@media only screen and (max-width: 800px){
+  .saludo {
+    margin-top: 2rem;
+    justify-content: center;
+  }
+
+} 
+
+/**************************************************************/
+/***************480px******************************************/
+/**************************************************************/
+
+@media only screen and (max-width: 480px){
+  
+
+
+}
+
