--- a/Trabajo Final/backEnd/views/admin/components/modificar.hbs
+++ b/Trabajo Final/backEnd/views/admin/components/modificar.hbs
@@ -207,6 +207,17 @@
                     placeholder="XX:XX - XX:XX" />
             </div>
         </div>
+        <div class=" form-group">
+                <!-- Selector de Permisos -->
+                <div class="col-1">
+                    <label for="permiso" class="control-label">Permisos</label>
+                    <select class="drop" name="permiso">
+                        <option value="" selected>Selecciona..</option>
+                        <option value="docente">Docente</option>
+                        <option value="admin">Administrador</option>
+                    </select>
+                </div>
+             </div>
 
         <div class="form-group">
             <!-- Foto-->
