--- a/Trabajo Final/backEnd/public/stylesheets/alumnos.css
+++ b/Trabajo Final/backEnd/public/stylesheets/alumnos.css
@@ -32,3 +32,65 @@ tr:hover #tbody {
 .btn {
   color: white;
 }
+
+
+/**************************************************************/
+/***************1024p******************************************/
+/**************************************************************/
+ 
+@media only screen and (max-width: 1200px){
+.hidden1{
+  display: none;
+}
+
+} 
+
+/**************************************************************/
+/***************800px******************************************/
+/**************************************************************/
+
+@media only screen and (max-width: 1024px){
+  .hidden2 {
+    display: none;
+  }
+}
+
+/**************************************************************/
+/***************480px******************************************/
+/**************************************************************/
+
+@media only screen and (max-width: 495px){
+  .hidden3{
+    display: none;
+  }
+  .table-light{
+    font-size: 13px !important;
+  }
+
+  td .btn{
+    font-size: 7px !important;
+  }
+  td .btn i{
+    font-size: 12px !important;
+  }
+
+}
+
+@media only screen and (max-width: 365px){
+  td .btn{
+    font-size: 5px !important;
+  }
+  td .btn i{
+    font-size: 10px !important;
+  }
+  
+}
+@media only screen and (max-width: 349px){
+  td .btn{
+    font-size: 3px !important;
+  }
+  td .btn i{
+    font-size: 8px !important;
+  }
+  
+}
