--- a/Trabajo Final/backEnd/public/stylesheets/style.css
+++ b/Trabajo Final/backEnd/public/stylesheets/style.css
@@ -108,7 +108,31 @@ h3 {
 /***************480px******************************************/
 /**************************************************************/
 
-/* @media only screen and (max-width: 480px){
+ @media only screen and (max-width: 480px){
+p {
 
+  
+  font-size: 12px !important;
+  margin: 6px;
+}
 
-} */
+h1 {
+  
+  
+  font-size: 20px !important;
+  margin: 6px;
+}
+
+h2 {
+  
+  font-size: 16px !important;
+  margin: 6px;
+}
+
+h3 {
+
+  font-size: 14px !important;
+  margin: 6px;
+}
+
+} 
