--- a/Trabajo Final/backEnd/public/stylesheets/footer.css
+++ b/Trabajo Final/backEnd/public/stylesheets/footer.css
@@ -2,7 +2,7 @@
   grid-area: footer;
   opacity: 0.9;
   position: sticky;
-  margin-top: 50px;
+  /* margin-top: 250px; */
   bottom: 0;
   height: 6.25rem;
   width: 100%;
